# polypoly

./: .gitignore  BOT_ENV.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci-cd.yml
src/: action_store.rs  bot_config.rs  bot_runner.rs  clob_client.rs  clob_signer.rs  clob_types.rs  collector.rs  gamma_client.rs  main.rs  poly_history.rs  websocket_client.rs
