[package]
name = "polymarket_collector_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
